add products endpoints
