# swagger.yaml
@@ -3,11 +3,26 @@ info:
   title: API for test automation tutorial
   version: 1.0.0
 servers:
-  - url: http://localhost:27002
+  - url: http://localhost:3001
 tags:
   - name: user
-    description: Operations about user
+    description: Endpoints about user
+  - name: auth
+    description: Basic auth endpoint
 paths:
+  /auth:
+    get:
+      tags:
+        - auth
+      security:
+        - basicAuth: []
+      summary: Basic auth
+      responses:
+        "204":
+          description: successful unauthorized
+        "401":
+          description: unauthorized
+
   /users:
     get:
       tags:
@@ -116,7 +131,13 @@ paths:
           description: Invalid ID format
         "404":
           description: User not found
+
 components:
+  securitySchemes:
+    basicAuth:
+      type: http
+      scheme: basic
+      description: Use `user` / `passwd` as the test credentials
   schemas:
     User:
       type: object
@@ -128,8 +149,7 @@ components:
         - email
       properties:
         id:
-          type: integer
-          format: int64
+          type: number
           example: 10
         firstName:
           type: string
